# whisperly

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  vcpkg-configuration.json  vcpkg.json
.nix/: ninja  nix-cmake.sh  nix-run.sh
src/client/: CMakeLists.txt  main.cpp
src/client/cli/: cli.cpp  cli.hpp
src/client/http/: http_client.cpp  http_client.hpp
src/client/net/: net_client.cpp  net_client.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/http/: http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp
src/server/net/: tcp_server.cpp  tcp_server.hpp  ws_session.cpp  ws_session.hpp
